--- a/package.json
+++ b/package.json
@@ -1,27 +1,55 @@
 {
   "name": "brave-json",
   "version": "0.1.5",
-  "description": "As much as possible to serialize JavaScript object to JSON",
-  "main": "lib/brave-json.js",
-  "typings": "lib/brave-json.d.ts",
+  "description": "",
+  "keywords": [],
+  "files": [
+    "lib",
+    "src"
+  ],
+  "type": "module",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "git@github.com:BlackGlory/brave-json.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
-    "precommit": "yarn lint && yarn test",
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "test": "jest --coverage --config jest.config.json",
-    "build": "tsc --outDir lib"
+    "prepare": "ts-patch install -s",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
+    "test": "vitest --run",
+    "prepublishOnly": "run-s prepare clean build",
+    "clean": "rimraf lib",
+    "build": "tsc --project tsconfig.build.json",
+    "release": "standard-version"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "run-s prepare lint build test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/type-detect": "^4.0.1",
-    "coveralls": "^3.0.1",
-    "husky": "^0.14.3",
-    "jest": "^23.0.1",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.46.0",
+    "husky": "^4.3.8",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1",
+    "standard-version": "^9.5.0",
+    "ts-patch": "^3.0.2",
+    "tslib": "^2.6.1",
+    "typescript": "5.1.6",
+    "typescript-transform-paths": "^3.4.6",
+    "vite": "^4.4.8",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.1"
   },
   "dependencies": {
     "circular-json-es6": "^2.0.2",
