--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "module": "CommonJS"
-  , "target": "ESNext"
+    "target": "ES2018"
+  , "module": "NodeNext"
+  , "moduleResolution": "NodeNext"
   , "strict": true
-  , "lib": [
-      "esnext"
-    , "dom"
+  , "esModuleInterop": true
+  , "baseUrl": "."
+  , "paths": {
+      "@src/*": ["src/*"]
+    , "@test/*": ["__tests__/*"]
+    }
+  , "plugins": [
+      { "transform": "typescript-transform-paths" }
+    , { "transform": "typescript-transform-paths", "afterDeclarations": true }
     ]
-  , "removeComments": false
-  , "sourceMap": true
-  , "declaration": true
-  , "alwaysStrict": false
-  , "noImplicitUseStrict": true
   }
 }
