--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
   "extends": "./tsconfig.base.json"
 , "include": [
     "src"
-  , "typings"
+  , "__tests__"
   ]
 , "exclude": [
     "node_modules"
   , "lib"
-  , "test"
   ]
 }
